--- a/calci.html
+++ b/calci.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calci</title>
-    <link rel="stylesheet" href="/css/calci.css">
+    <link rel="stylesheet" href="calci.css">
 </head>
 <body>
     
@@ -45,7 +45,7 @@
             <button class="eqalbtn">=</button>
         </div>
     </div>
-    <script src="/javascript/calci.js">
+    <script src="calci.js">
 
     </script>
 
